
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added OnResourceTVFormRender event for affecting TV displays on resources
- [#MODX-2104] Auto-detect correct value and set use_multibyte on new installs
- [#MODX-2104] Added 'use_multibyte' setting that allows for use of mb_* functions for multibyte characters; fixes bug with MB chars in output filters
- [#MODX-2019] Added default Element policy
- Fixed issue with Ext.form.BasicForm and prior commit, adjust else/if condition
- Added headers check to all Ajax requests to connectors to require unique site ID header to harden security
- Added modx-content-above and modx-content-below divs for RTE usage
- [#MODX-2008] Updated Russian translation
- Enabled RTEs to be used on TV default value field
- Added which_element_editor setting, which allows for usage of multiple RTEs for Elements vs Resources
- Fixed bug with custom_resource_classes setting implementation on blank values
- [#MODX-2094] Enabled Packages to be able to have their Provider changed
- [#MODX-1809] Added manager_time_format to allow changing of time formats in mgr widgets
- Added extra var to pass revo version in transport provider requests; helps with download metrics and version checking
- Optimized package grid by moving menus to JS
- Fixed issue where manager_language setting was being ignored in mgr connectors
- Enhance security on language string loader
- [#MODX-1834] Adjusted color on Yes/No on packages grid to more reflect intent
- Readjust JS firing timing for Elements to prevent RTE timing errors in faster browsers
- [#MODX-2090] Added auto_check_pkg_updates_cache_expire setting, which caches package update checks in Package Management to speed up grid load times