@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added phpThumb specific settings
 - Added OnResourceTVFormRender event for affecting TV displays on resources
 - [#MODX-2104] Auto-detect correct value and set use_multibyte on new installs
 - [#MODX-2104] Added 'use_multibyte' setting that allows for use of mb_* functions for multibyte characters; fixes bug with MB chars in output filters
